# gemini-flow

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  GEMINI.md  LICENSE  README.md  VISION.md  docker-compose.yml  gemini-cli-docs-26-06-2025.txt  gemini-gem-arquiteto-de-projetos.md  gemini-gem-gerador-de-issues.md  gemini-gem-gerente-de-issues.md  gemini-gem-super-devops.md  jules_bootstrap.sh  nginx.conf  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
app/: main.py
backend/: .env.example  config.py  file_generator.py  main.py  orchestrator.py  pyproject.toml
backend/output/generate_test_ready_20250629225637/: bootstrap.sh
backend/output/generate_test_ready_20250629225856/: bootstrap.sh
backend/output/generate_test_ready_20250629230006/: bootstrap.sh
backend/output/generate_test_ready_20250629230135/: bootstrap.sh
backend/output/generate_test_ready_20250630152532/: bootstrap.sh
backend/output/generate_test_ready_20250630161630/: bootstrap.sh
backend/output/generate_test_ready_20250630162000/: bootstrap.sh
backend/output/notindevopsproject_20250629152944/: bootstrap.sh
backend/output/notindevopsproject_20250629153123/: bootstrap.sh
backend/output/test_project_bootstrap_content_20250629225637/: bootstrap.sh
backend/output/test_project_bootstrap_content_20250629225856/: bootstrap.sh
backend/output/test_project_bootstrap_success_20250629225637/: bootstrap.sh
backend/output/test_project_bootstrap_success_20250629225856/: bootstrap.sh
backend/tests/: test_error_handling.py  test_file_generation.py  test_main_api.py  test_orchestrator.py
frontend/: package-lock.json  (+1 more)
(+176 files in other folders)
